# SemanticKitti

kitti_segment_filtering/: CMakeLists.txt  package.xml
kitti_segment_filtering/include/: color_table.h
kitti_segment_filtering/src/: segment_cloud_filter.cpp
kitti_segment_filtering/src/visualization/: colorKittiLabel.cpp  color_table.cpp
kitti_utility/: CMakeLists.txt  package.xml
kitti_utility/src/: colorKittiLabel.cpp  color_table.cpp  convertKITTIsemanticBag.py  pcTobin.py
